--- a/package.json
+++ b/package.json
@@ -6,35 +6,67 @@
   "scripts": {
     "build": "webpack --mode production --env=production",
     "start": "webpack-dev-server --open --mode development --env=development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "NODE_ENV=production lint-staged"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "file-loader": "^4.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.2",
+    "lint-staged": "^9.2.1",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
     "postcss-pr": "^1.1.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
+    "luxon": "^1.17.2",
+    "mobx": "^5.13.0",
+    "mobx-devtools": "^0.9.21",
+    "mobx-react": "^6.1.1",
+    "mobx-react-devtools": "^6.1.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-color": "^2.17.3",
+    "react-cookies": "^0.1.1",
+    "react-day-picker": "^7.3.1",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "pretty-quick --staged",
+      "eslint src/ --fix",
+      "git add"
+    ]
   }
 }
