--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,8 @@
   "plugins": [
     ["@babel/plugin-proposal-decorators", {"legacy":  true}],
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-transform-runtime", {
+      "regenerator": true
+    }]
   ]
 }
