--- a/package.json
+++ b/package.json
@@ -48,19 +48,26 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "connected-react-router": "^6.5.2",
     "isomorphic-fetch": "^2.2.1",
     "luxon": "^1.17.2",
-    "mobx": "^5.13.0",
-    "mobx-devtools": "^0.9.21",
-    "mobx-react": "^6.1.1",
-    "mobx-react-devtools": "^6.1.1",
+    "normalizr": "^3.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.8.6",
     "react-color": "^2.17.3",
     "react-cookies": "^0.1.1",
     "react-day-picker": "^7.3.1",
     "react-dom": "^16.8.6",
+    "react-final-form": "^6.3.0",
+    "react-notification-system-redux": "^2.0.0",
+    "react-redux": "^7.1.3",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0"
   },
   "lint-staged": {
     "*.{js,jsx}": [
