--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
     "connected-react-router": "^6.5.2",
+    "final-form-arrays": "^3.0.2",
     "isomorphic-fetch": "^2.2.1",
     "luxon": "^1.17.2",
     "normalizr": "^3.4.1",
@@ -59,7 +60,9 @@
     "react-cookies": "^0.1.1",
     "react-day-picker": "^7.3.1",
     "react-dom": "^16.8.6",
+    "react-dropdown": "^1.6.4",
     "react-final-form": "^6.3.0",
+    "react-final-form-arrays": "^3.1.1",
     "react-notification-system-redux": "^2.0.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.0.1",
