--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
+    "bootstrap": "4",
     "connected-react-router": "^6.5.2",
     "final-form-arrays": "^3.0.2",
     "isomorphic-fetch": "^2.2.1",
@@ -56,6 +57,7 @@
     "normalizr": "^3.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.8.6",
+    "react-bootstrap-table-next": "^3.3.3",
     "react-color": "^2.17.3",
     "react-cookies": "^0.1.1",
     "react-day-picker": "^7.3.1",
