--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dropdown": "^1.6.4",
     "react-final-form": "^6.3.0",
     "react-final-form-arrays": "^3.1.1",
+    "react-modal": "^3.11.1",
     "react-notification-system-redux": "^2.0.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.0.1",
