--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.8.6",
     "react-bootstrap-table-next": "^3.3.3",
+    "react-bootstrap-table2-editor": "^1.4.0",
     "react-color": "^2.17.3",
     "react-cookies": "^0.1.1",
     "react-day-picker": "^7.3.1",
